Resolve conflict of z-index between header, TOC and lightgallery and adjust gallery display

--- a/source/css/scheme-taurus/header.styl
+++ b/source/css/scheme-taurus/header.styl
@@ -52,7 +52,7 @@ shorter_underline($width, $offset)
   fixed_tl(0, 0)
   width: 100%
   height: 7em
-  z-index: 15000
+  z-index: 101
   // appearance
   banner-shadow()
   background-color: white
