--- a/source/css/scheme-taurus/post/layout.styl
+++ b/source/css/scheme-taurus/post/layout.styl
@@ -79,7 +79,7 @@
     flex-wrap: wrap
   .article-toc
     fixed_tr(10em, 4em)
-    z-index: 10000
+    z-index: 100
     +for_breakpoint(mobile)
       display: none
     .toc-button
