--- a/source/css/scheme-taurus/post/topography.styl
+++ b/source/css/scheme-taurus/post/topography.styl
@@ -199,14 +199,16 @@ Topography of post for scheme taurus
     flex-direction: row
     flex-wrap: wrap
     align-items: flex-start
-    justify-content: space-around
+    justify-content: flex-start
     margin: 0 auto
     width: 100%
     .article-gallery-item
       display: block
       text-align: left
+      margin-top: 0.5em
+      margin-left: 0.5em
       img
-        width: 230px
+        width: 200px
         height: 160px
         box-shadow: 3px 3px 12px 3px #eee
         border-radius: 5px
